[dashboard] fix sunset text sometimes wrapping

--- a/dashboard/web/styles.css
+++ b/dashboard/web/styles.css
@@ -142,7 +142,7 @@ body {
 				width: 48px;
 				height: 48px;
 				vertical-align: middle;
-				margin-right: 5px;
+				margin-right: 3px;
 			}
 		}
 	}
